src/test/deca/context/invalid/provided/equals_non_compatible.deca
//Resultats :
//Erreur contextuelle
//Ligne 6 : Cannot be applied to this types :int & boolean
{
if (1 == true) {
	println("1 is equal to true");
}
}
